--- a/src/modules/NavBar/NavBar.scss
+++ b/src/modules/NavBar/NavBar.scss
@@ -38,8 +38,8 @@
 			@extend %pa;
 			left: 15px;
 			top: 50%;
-			@include sprite($nb-all-sprite);
-			margin-top: nth($nb-all-sprite, 6) / -2;
+			@include sprite($nb-all);
+			margin-top: nth($nb-all, 6) / -2;
 		}
 	}
 }
