--- a/example/src/components/Common/Common.njk
+++ b/example/src/components/Common/Common.njk
@@ -11,7 +11,7 @@
 <body onselectstart="return false;">
     {% block container %}{% endblock %}
     {% block script %}
-    <script src="js/common.js"></script>
+    {# <script src="js/common.js"></script> #}
     {% endblock %}
     <div class="hidden">
         {% block statistic %}
