--- a/example/src/views/index/index.njk
+++ b/example/src/views/index/index.njk
@@ -2,7 +2,7 @@
 
 {% block style %}
 {{ super() }}
-<link rel="stylesheet" href="css/index.css" inline>
+<link rel="stylesheet" href="./index.scss" inline>
 {% endblock %}
 
 {% block container %}
@@ -20,5 +20,5 @@
 
 {% block script %}
 {{ super() }}
-<script src="js/index.js" inline></script>
+{# <script src="./index.ts" inline></script> #}
 {% endblock%}
